objects/Case_Escalation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Escalation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>@genesys.com</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccntOwner_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Case__r.End_User_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>used in email templates</description>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <description>used in email templates</description>
        <formula>TEXT(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <description>used in email templates</description>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Thread_ID__c</fullName>
        <description>used in email templates</description>
        <formula>Case__r.Thread_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Escalations</relationshipLabel>
        <relationshipName>Case_Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Escalations</relationshipLabel>
        <relationshipName>Account_Case_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escalation_Note__c</fullName>
        <label>Escalation Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Escalation_Requester__c</fullName>
        <inlineHelpText>Provide email address of individual that requested escalation</inlineHelpText>
        <label>Escalation Requester</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAM/Manager</fullName>
                </value>
                <value>
                    <fullName>Leader/Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>EVP</fullName>
                </value>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Support_Group__c</fullName>
        <formula>TEXT(Tech_Escalation_Owner__r.Product_Support_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PSG of Tech Escalation Owner</inlineHelpText>
        <label>Product Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analyst Soft Skills Issue</fullName>
                </value>
                <value>
                    <fullName>Internal Genesys Delays</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Priority Change Request</fullName>
                </value>
                <value>
                    <fullName>Product Issue/Limitation</fullName>
                </value>
                <value>
                    <fullName>Project Blocker</fullName>
                </value>
                <value>
                    <fullName>Recurring Issue</fullName>
                </value>
                <value>
                    <fullName>Require Update</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Security/Stability Issue</fullName>
                </value>
                <value>
                    <fullName>SLT</fullName>
                </value>
                <value>
                    <fullName>Timezone Concern</fullName>
                </value>
                <value>
                    <fullName>Urgent Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Escalation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Escalation Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>@genesys.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TechOwner_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I verified that Customer Flag is accurat</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Account__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Escalation_Owner__c</columns>
        <columns>Tech_Escalation_Owner__c</columns>
        <columns>Product_Support_Group__c</columns>
        <columns>Level__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureCloud_Escalations_non_closed</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Reason__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Escalation_Owner__c</columns>
        <columns>Tech_Escalation_Owner__c</columns>
        <columns>Level__c</columns>
        <columns>Description__c</columns>
        <columns>Escalation_Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Support_Group__c</field>
            <operation>equals</operation>
            <value>Cloud PureCloud</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>PureCloud Escalations - non-closed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ESC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>